third_party/WebKit/Source/platform/testing/TestingPlatformSupport.h
@@ -171,8 +171,9 @@ class TestingPlatformSupportWithMockScheduler : public TestingPlatformSupport {
   // instead.
   void runUntilIdle();
 
-  // Runs for |seconds|. Note we use a testing clock rather than the wall clock
-  // here.
+  // Runs for |seconds| the testing clock is advanced by |seconds|.  Note real
+  // time elapsed will typically much less than |seconds| because delays between
+  // timers are fast forwarded.
   void runForPeriodSeconds(double seconds);
 
   // Advances |m_clock| by |seconds|.
